{
    "name": "InputActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "2a68f631-e924-4e98-8727-12749a63dab5",
            "actions": [
                {
                    "name": "Launch",
                    "type": "Button",
                    "id": "e64e1082-7b20-4b8b-a0a1-e42dadfc0f1a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftPaddle",
                    "type": "Button",
                    "id": "08c42735-993c-48ea-ae4f-d3584b1bc66a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightPaddle",
                    "type": "Button",
                    "id": "e4ef363d-43ec-47b5-90d5-ea2ba568e630",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "70c0121c-705d-429d-926b-d1a75dd019d9",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Launch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a26b22c6-5d94-4761-b311-95bcd155fad8",
                    "path": "<SwitchProControllerHID>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Launch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4d62653-c951-48db-8ef1-e0271539d860",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftPaddle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b0dd977c-f7a7-44e9-8d6d-9718974aeaa6",
                    "path": "<SwitchProControllerHID>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftPaddle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d1100e38-2e99-4df4-a8c6-7ee573e87255",
                    "path": "<Keyboard>/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightPaddle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d6b779c5-e354-4f75-a89a-a0272930e0cc",
                    "path": "<SwitchProControllerHID>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightPaddle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}